--- a/config.json
+++ b/config.json
@@ -9,16 +9,16 @@
     "sort_by_mean": false,
     "nodes_to_filter": [118, 168, 261],
     "number_of_nodes": 3,
-    "window_size": 84,
-    "prediction_horizon": 12,
+    "window_size": 1,
+    "prediction_horizon": 1,
     "stride" : 1,
-    "communication_rounds" : 100,
-    "num_epochs_local_no_federation": 100,
-    "num_epochs_local_federation": 10,
-    "epoch_local_retrain_after_federation": 100,
+    "communication_rounds" : 1,
+    "num_epochs_local_no_federation": 1,
+    "num_epochs_local_federation": 1,
+    "epoch_local_retrain_after_federation": 1,
     "learning_rate": 0.001,
     "model": "LSTMModel",
-    "save_model_path": "/LSTMModel/",
+    "save_model_path": "LSTMModel/",
     "model_input_size" : 1,
     "model_hidden_size" : 32,
     "model_num_layers" : 6,
